<resources>
    <string name="app_name">ProvedorApp</string>
    <string name="title_productos">Productos</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_pedido_actual">Pedido Actual</string>
    <string name="buscar">Buscar</string>
    <string name="nombre_contacto">Persona de Contacto</string>
    <string name="nombre_tienda">Nombre de Tienda</string>
    <string name="nombre_factura">Nombre de Factura</string>
    <string name="dni_cliente">DNI del cliente</string>
    <string name="direccion">Dirección</string>
    <string name="retencion">Retención</string>
    <string name="presentacion">Presentación</string>
    <string name="stock">Stock</string>
    <string name="agregar">Agregar</string>
    <string name="disminuir">Disminuir</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="modificar_cliente">Modificar Cliente</string>
    <string name="datos_factura">Datos de Factura</string>
    <string name="cancelar">Cancelar</string>
    <string name="datos_cliente">Datos Cliente</string>
    <string name="datos_clientes_factura">Datos de Factura</string>
    <string name="confirmar_borrado">Confirmar Borrado</string>
    <string name="confirmar_afirmativo">Si, eliminar</string>
    <string name="confirmar_negativo">No</string>
    <string name="cliente_borrado">Cliente eliminado satisfactoriamente</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="modificar_producto">Modificar Producto</string>
    <string name="nombre_producto">Nombre del Producto</string>
    <string name="categoria_producto">Categoria</string>
    <string name="variantes_producto">Variantes</string>
    <string name="variante_producto">Variante</string>
    <string name="precio">Precio</string>
    <string name="iva_producto">Tipo IVA</string>
    <string name="url_img">Url de la Imagen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clientes">Clientes</string>
    <string name="error_categoria">El Producto tiene que pertenecer a una categoria</string>
    <string name="error_iva">Debes seleccionar el iva impuesto al producto</string>
</resources>