<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gestionProducto.GestionProductos">

    <TextView
        android:id="@+id/tvTituloOperacionProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregar_producto"
        android:textColor="@color/contrasteCeleste"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerTituloGP"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/celeste"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloOperacionProductos"
        app:layout_constraintStart_toStartOf="@+id/tvTituloOperacionProductos"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloOperacionProductos" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInLayNomProductoGP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/nombre_producto"
        android:textColorHint="@color/contrasteCeleste"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/contrasteCeleste"
        app:layout_constraintEnd_toEndOf="@+id/dividerTituloGP"
        app:layout_constraintStart_toStartOf="@+id/dividerTituloGP"
        app:layout_constraintTop_toBottomOf="@+id/dividerTituloGP"
        app:startIconDrawable="@drawable/ic_baseline_archive_24">

        <AutoCompleteTextView
            android:id="@+id/autoCtvNomProductoGP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownHeight="300dp"
            android:inputType="text"
            android:textColorHint="@color/contrasteCeleste" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInLayCategoriaGP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/categoria_producto"
        android:textColorHint="@color/contrasteCeleste"
        app:hintTextColor="@color/contrasteCeleste"
        app:layout_constraintEnd_toEndOf="@+id/dividerTituloGP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tInLayNomProductoGP"
        app:layout_constraintTop_toBottomOf="@+id/tInLayNomProductoGP"
        app:startIconDrawable="@drawable/ic_baseline_archive_24">

        <AutoCompleteTextView
            android:id="@+id/autoCtvCategoriaGP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownHeight="300dp"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInLayTipoIVAGP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/iva_producto"
        android:textColorHint="@color/contrasteCeleste"
        app:hintTextColor="@color/contrasteCeleste"
        app:layout_constraintEnd_toEndOf="@+id/tInLayCategoriaGP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tInLayCategoriaGP"
        app:layout_constraintTop_toBottomOf="@+id/tInLayCategoriaGP"
        app:startIconDrawable="@drawable/ic_baseline_archive_24">

        <AutoCompleteTextView
            android:id="@+id/autoCtvTipoIVAGP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownHeight="300dp"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/variantes_producto"
        android:textColor="@color/contrasteCeleste"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tInLayTipoIVAGP" />

    <ImageButton
        android:id="@+id/btnAgregarVarianteGP"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerVariantes"
        app:layout_constraintEnd_toEndOf="@+id/recyclerVariantes"
        app:srcCompat="@drawable/ic_round_add_circle_outline_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerVariantes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerVariantesGP" />

    <Button
        android:id="@+id/btnCancelarGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancelar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerVariantes"
        app:layout_constraintTop_toBottomOf="@+id/recyclerVariantes" />

    <Button
        android:id="@+id/btnAgregarProductoGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:backgroundTint="@color/contrasteCeleste"
        android:text="@string/agregar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerVariantes"
        app:layout_constraintTop_toBottomOf="@+id/recyclerVariantes" />

    <View
        android:id="@+id/dividerVariantesGP"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/celeste"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>