<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentClientesCtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.clientes.ClientesFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spnClientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/clientes"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloNombreTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_tienda"
        android:textColor="@color/contrasteCeleste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spnClientes"
        app:layout_constraintTop_toBottomOf="@+id/dividerDatosCliente" />

    <TextView
        android:id="@+id/tvNombreTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloNombreTienda"
        app:layout_constraintStart_toStartOf="@+id/tvTituloNombreTienda"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloNombreTienda" />

    <TextView
        android:id="@+id/tvTituloPersonaContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_contacto"
        android:textColor="@color/contrasteCeleste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/spnClientes"
        app:layout_constraintTop_toTopOf="@+id/tvTituloNombreTienda" />

    <TextView
        android:id="@+id/tvPersonaContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloPersonaContacto"
        app:layout_constraintStart_toStartOf="@+id/tvTituloPersonaContacto"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPersonaContacto" />

    <TextView
        android:id="@+id/tvNombreFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloNombreFactura"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/tvTituloNombreFactura"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloNombreFactura" />

    <TextView
        android:id="@+id/tvTituloNombreFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_factura"
        android:textColor="@color/contrasteCeleste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spnClientes"
        app:layout_constraintTop_toBottomOf="@+id/dividerDatosCliente2" />

    <TextView
        android:id="@+id/tvTituloDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dni_cliente"
        android:textColor="@color/contrasteCeleste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/spnClientes"
        app:layout_constraintTop_toBottomOf="@+id/dividerDatosCliente2" />

    <TextView
        android:id="@+id/tvDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloDni"
        app:layout_constraintStart_toStartOf="@+id/tvTituloDni"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDni" />

    <TextView
        android:id="@+id/tvTituloDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/direccion"
        android:textColor="@color/contrasteCeleste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloNombreFactura"
        app:layout_constraintStart_toStartOf="@+id/tvTituloNombreFactura"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreFactura" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvNombreFactura"
        app:layout_constraintStart_toStartOf="@+id/tvNombreFactura"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDireccion" />

    <TextView
        android:id="@+id/tvTituloRetencion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/retencion"
        android:textColor="@color/contrasteCeleste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloDni"
        app:layout_constraintStart_toStartOf="@+id/tvTituloDni"
        app:layout_constraintTop_toBottomOf="@+id/tvDni" />

    <TextView
        android:id="@+id/tvRetencion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloRetencion"
        app:layout_constraintStart_toStartOf="@+id/tvTituloRetencion"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloRetencion" />

    <TextView
        android:id="@+id/tvTituloDatosClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/datos_cliente"
        android:textColor="@color/contrasteCeleste"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnClientes" />

    <View
        android:id="@+id/dividerDatosCliente"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/celeste"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloDatosClientes"
        app:layout_constraintStart_toStartOf="@+id/tvTituloDatosClientes"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDatosClientes" />

    <View
        android:id="@+id/dividerDatosCliente2"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/celeste"
        app:layout_constraintEnd_toEndOf="@+id/tvTitutloDatosFactura"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitutloDatosFactura"
        app:layout_constraintTop_toBottomOf="@+id/tvTitutloDatosFactura" />

    <TextView
        android:id="@+id/tvTitutloDatosFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/datos_factura"
        android:textColor="@color/contrasteCeleste"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/spnClientes"
        app:layout_constraintStart_toStartOf="@+id/spnClientes"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreTienda" />

    <ImageButton
        android:id="@+id/imgBtnMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_settings_64"
        app:layout_constraintBottom_toBottomOf="@+id/tvTituloDatosClientes"
        app:layout_constraintStart_toEndOf="@+id/tvTituloDatosClientes"
        app:layout_constraintTop_toTopOf="@+id/tvTituloDatosClientes" />

    <ImageButton
        android:id="@+id/imgBtnBorrarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="@+id/imgBtnMod"
        app:layout_constraintStart_toEndOf="@+id/imgBtnMod"
        app:layout_constraintTop_toTopOf="@+id/imgBtnMod"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>